<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemList">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        android:padding="28dp"
        android:paddingTop="54dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="returnItem"
            android:text="@string/list_item_1" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="returnItem"
            android:text="@string/list_item_2" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="returnItem"
            android:text="@string/list_item_3" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="returnItem"
            android:text="@string/list_item_4" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="returnItem"
            android:text="@string/list_item_5" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="returnItem"
            android:text="@string/list_item_6" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="returnItem"
            android:text="@string/list_item_7" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="returnItem"
            android:text="@string/list_item_8" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="returnItem"
            android:text="@string/list_item_9" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="returnItem"
            android:text="@string/list_item_10" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>